java - - hashMap and treeMap

--- a/markdown/12.md
+++ b/markdown/12.md
@@ -292,7 +292,7 @@ public static ListNode getKGroupEnd(ListNode start, int k) {
 
 **反转，改变头尾指针指向**
 
-```
+```java
 public static void reverse(ListNode start, ListNode end) {
     //之前的分区最后一个结点，s前一个结点不用关心,也看不到，指向null就行
     end = end.next;
@@ -311,7 +311,7 @@ public static void reverse(ListNode start, ListNode end) {
 
 **串起来**
 
-```
+```java
 public static ListNode reverseKGroup(ListNode head, int k) {
     ListNode start = head;
     ListNode end = getKGroupEnd(start,k);   //数到k的点返回给end
@@ -478,7 +478,7 @@ $$
 
 > 本题的主要难点在于链表中数位的顺序与我们做加法的顺序是相反的，为了逆序处理所有数位，我们可以使用栈：把所有数字压入栈中，再依次取出相加。计算过程中需要注意进位的情况。
 
-```
+```java
 class Solution {
     public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
         Deque<Integer> stack1 = new ArrayDeque<Integer>();
@@ -525,7 +525,7 @@ class Solution {
 
 **代码**
 
-```
+```java
 /**
  * Definition for singly-linked list.
  * public class ListNode {
