--- a/markdown/15.md
+++ b/markdown/15.md
@@ -56,7 +56,7 @@ class Node<N> {
 > 二叉树的建立、
 > 以及二叉树结点的查找、修改、插入与删除。
 >
-> 一般需要实现的是：递归和非递归实现二叉树前序遍历、中序遍历、后序遍历。（针对头在左中右）
+> 一般需要实现的是：递归和**非递归**实现二叉树前序遍历、中序遍历、后序遍历。（针对头在左中右）
 
 
 
@@ -90,11 +90,11 @@ public static void Recur(Node head) {
     if(head == null) {
         return;
     }
-    System.out.println(head.value + " ");    //前序遍历
+    //System.out.println(head.value + " ");    //前序遍历
     Recur(head.left);
-    System.out.println(head.value + " ");    //中序遍历
+    //System.out.println(head.value + " ");    //中序遍历
     Recur(head.right);
-    System.out.println(head.value + " ");    //后序遍历
+    //System.out.println(head.value + " ");    //后序遍历
 }
 ```
 
@@ -141,11 +141,11 @@ $$
 + 打印car（处理）car
 + **先把car右孩子压入栈，再把car左孩子压入栈（如果有）**
 
-> 先压1，出1
+> 先压1，出1     –1
 >
-> 再压3，压2，出2，出3
+> 再压3，压2，出2，出3    –3，2
 >
-> 先压5，压4，出4，出5
+> 先压5，压4，出4，出5  
 >
 > …..
 
