--- a/markdown/16.md
+++ b/markdown/16.md
@@ -1,6 +1,8 @@
 + [author](https://github.com/3293172751)
 <a href="https://github.com/3293172751" target="_blank"><img src="https://img.shields.io/badge/Github-xiongxinwei-inactive?style=social&logo=github"></a></p>
-# 第16节
+
+# 第16节 Morris遍历
+
 + [回到目录](../README.md)
 + [回到项目首页](../../README.md)
 + [上一节](15.md)
@@ -8,11 +10,50 @@
 ---
 [TOC]
 
+## Morris算法
+
++ 面试中要考虑空间复杂度，此时应该考虑用到morris的算法，能在时间复杂度不变的情况下，降低空间复杂度。
+
+**morris算法也可以使用先序、中序、后序遍历**
+
+> Manacher算法，又叫“马拉车”算法，可以在时间复杂度为O(n)的情况下求解一个字符串的最长回文子串长度的问题。我们先看一个很简单的题目。
 
 
 
+### [二叉树的中序遍历](https://leetcode.cn/problems/binary-tree-inorder-traversal/)
+
++ [ ] [leetcode](https://leetcode.cn/problems/binary-tree-inorder-traversal/)
++ [ ] [leetcode.com](https://leetcode.com/problems/binary-tree-inorder-traversal/)
+
+Given the `root` of a binary tree, return *the inorder traversal of its nodes' values*.
+
+**Example 1:**
+
+![img](http://sm.nsddd.top/inorder_1.jpg?mail:3293172751@qq.com)
+
+```
+Input: root = [1,null,2,3]
+Output: [1,3,2]
+```
+
+**Example 2:**
+
+```
+Input: root = []
+Output: []
+```
+
+**Example 3:**
+
+```
+Input: root = [1]
+Output: [1]
+```
+
+> 这个题目就可以很好的用递归和迭代来解决，同时还可以用Morris算法来解决
 
 ## END 链接
+
 + [回到目录](../README.md)
 + [上一节](15.md)
 + [下一节](17.md)
