--- a/markdown/9.md
+++ b/markdown/9.md
@@ -157,7 +157,9 @@ public static void main(String[] args){
 **上面的增删改查都是`O(1)`的时间,都是固定时间,但是这个固定时间是比较大的.**
 
 + 哈希表中是不会认为你的数据类型不同,在哈希表中都是按照值传递,值相同,就相同
-+ 非基础类型(或者是自己定义的类型),是按照引用传递的.
++ 非基础类型(或者是自己定义的类型),是按照引用传递的。
+
+
 
 ## 有序表：
 
@@ -166,7 +168,7 @@ public static void main(String[] args){
 > 3. 如果既有key，又伴随数据value，可以使用TreeMap结构(C++中叫OrderMap)
 > 4. 有无伴随数据value，是TreeSet和TreeMap的唯一区别，底层结构是一样的
 > 5. 有序表的增/删/改/查可以认为时间复杂度为O(logN)
-> 6. 红黑树、AVL树、size-balance-tree和跳表都属于有序表结构，只是底层具体实现不同
+> 6. **红黑树、AVL树、size-balance-tree和跳表都属于有序表结构，只是底层具体实现不同**
 > 7. 放入有序表的东西
 >    + 如果是基础类型，内部按值传递，内存占用为这个东西的大小；
 >    + 如果不是基础类型，必须提供比较器（如下代码），且内部按引用传递，内存占用是这个东西内存地址的大小
@@ -176,10 +178,12 @@ public static void main(String[] args){
 ## 有序表的使用
 
 ```java
-treeMap<Integer,String> treeMap1 = new TreeSet<>();
+treeMap<Integer,String> treeMap1 = new TreeSet<>();   //treeMap
+// 基础类型<>()
+// 非基础类型<>(...)
 treeMap.put(1,"我是1");
 treeMap.put(2,"我是2");
-treeMap.put(3,"我是3");
+treeMap.put(3,"我是3");  //1,2,3
 System.out.println(treeMap1.containsKey(1)); //true
 System.out.println(treeMap1.containsKey(4)); //false
 System.out.println(treeMap1.get(1)); //"我是1"
@@ -192,6 +196,9 @@ System.out.println(treeMap1.containsKey(1)); //false
 **有序表要比哈希表强大的地方在于:**
 
 > treeMap中的所有方法都是`log(n)`的级别,没有哈希表那么小,但是功能很强
+>
+> + `firstKey()`获取最小的key
+> + `lastKey()`获取最大的key
 
 ```java
 System.out.println(treeMap1.firstKey());  //最小的Key :0
@@ -205,6 +212,8 @@ System.out.println(treeMap1.ceilingKey(1));   //1
 ```
 
 **上面的Key不能自己定义,不然会报错,如何自己定义比较器:**
+
+> 非基础类型<>(...)，需要比较器
 
 ```java
 tree = new TreeSet<>(new NodeComparator());
@@ -273,7 +282,7 @@ class MyHashSet {
     
     public void add(int key) {
         int h = hash(key);
-        Iterator<Integer> iterator = data[h].iterator();
+        Iterator<Integer> iterator = data[h].iterator();    //
         while (iterator.hasNext()) {
             Integer element = iterator.next();
             if (element == key) {
