--- a/markdown/14.md
+++ b/markdown/14.md
@@ -56,7 +56,80 @@ YES
 >
 > 我们可以将字符串`x2`，依次进行比较，判断到最后一个字符结束。
 
-<iframe   src="https://carbon.now.sh/embed?bg=rgba%28171%2C+184%2C+195%2C+1%29&t=seti&wt=none&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=import%2520java.util.Scanner%253B%250A%250Apublic%2520class%2520Main%2520%257B%250A%250A%2509public%2520static%2520boolean%2520isRotation%28String%2520a%252C%2520String%2520b%29%2520%257B%250A%2509%2509if%2520%28a%2520%253D%253D%2520null%2520%257C%257C%2520b%2520%253D%253D%2520null%2520%257C%257C%2520a.length%28%29%2520%21%253D%2520b.length%28%29%29%2520%257B%250A%2509%2509%2509return%2520false%253B%250A%2509%2509%257D%250A%2509%2509String%2520b2%2520%253D%2520b%2520%252B%2520b%253B%250A%2509%2509return%2520getIndexOf%28b2%252C%2520a%29%2520%21%253D%2520-1%253B%250A%2509%257D%250A%250A%2509%252F%252F%2520KMP%2520Algorithm%250A%2509public%2520static%2520int%2520getIndexOf%28String%2520s%252C%2520String%2520m%29%2520%257B%250A%2509%2509if%2520%28s.length%28%29%2520%253C%2520m.length%28%29%29%2520%257B%250A%2509%2509%2509return%2520-1%253B%250A%2509%2509%257D%250A%2509%2509char%255B%255D%2520ss%2520%253D%2520s.toCharArray%28%29%253B%250A%2509%2509char%255B%255D%2520ms%2520%253D%2520m.toCharArray%28%29%253B%250A%2509%2509int%2520si%2520%253D%25200%253B%250A%2509%2509int%2520mi%2520%253D%25200%253B%250A%2509%2509int%255B%255D%2520next%2520%253D%2520getNextArray%28ms%29%253B%250A%2509%2509while%2520%28si%2520%253C%2520ss.length%2520%2526%2526%2520mi%2520%253C%2520ms.length%29%2520%257B%250A%2509%2509%2509if%2520%28ss%255Bsi%255D%2520%253D%253D%2520ms%255Bmi%255D%29%2520%257B%250A%2509%2509%2509%2509si%252B%252B%253B%250A%2509%2509%2509%2509mi%252B%252B%253B%250A%2509%2509%2509%257D%2520else%2520if%2520%28next%255Bmi%255D%2520%253D%253D%2520-1%29%2520%257B%250A%2509%2509%2509%2509si%252B%252B%253B%250A%2509%2509%2509%257D%2520else%2520%257B%250A%2509%2509%2509%2509mi%2520%253D%2520next%255Bmi%255D%253B%250A%2509%2509%2509%257D%250A%2509%2509%257D%250A%2509%2509return%2520mi%2520%253D%253D%2520ms.length%2520%253F%2520si%2520-%2520mi%2520%253A%2520-1%253B%250A%2509%257D%250A%250A%2509public%2520static%2520int%255B%255D%2520getNextArray%28char%255B%255D%2520ms%29%2520%257B%250A%2509%2509if%2520%28ms.length%2520%253D%253D%25201%29%2520%257B%250A%2509%2509%2509return%2520new%2520int%255B%255D%2520%257B%2520-1%2520%257D%253B%250A%2509%2509%257D%250A%2509%2509int%255B%255D%2520next%2520%253D%2520new%2520int%255Bms.length%255D%253B%250A%2509%2509next%255B0%255D%2520%253D%2520-1%253B%250A%2509%2509next%255B1%255D%2520%253D%25200%253B%250A%2509%2509int%2520pos%2520%253D%25202%253B%250A%2509%2509int%2520cn%2520%253D%25200%253B%250A%2509%2509while%2520%28pos%2520%253C%2520next.length%29%2520%257B%250A%2509%2509%2509if%2520%28ms%255Bpos%2520-%25201%255D%2520%253D%253D%2520ms%255Bcn%255D%29%2520%257B%250A%2509%2509%2509%2509next%255Bpos%252B%252B%255D%2520%253D%2520%252B%252Bcn%253B%250A%2509%2509%2509%257D%2520else%2520if%2520%28cn%2520%253E%25200%29%2520%257B%250A%2509%2509%2509%2509cn%2520%253D%2520next%255Bcn%255D%253B%250A%2509%2509%2509%257D%2520else%2520%257B%250A%2509%2509%2509%2509next%255Bpos%252B%252B%255D%2520%253D%25200%253B%250A%2509%2509%2509%257D%250A%2509%2509%257D%250A%2509%2509return%2520next%253B%250A%2509%257D%250A%250A%2509public%2520static%2520void%2520main%28String%255B%255D%2520args%29%2520%257B%250A%2520%2520%2520%2520%2520%2520%2520%2520Scanner%2520sc%2520%253D%2520new%2520Scanner%28System.in%29%253B%250A%2520%2520%2520%2520%2520%2520%2520%2520int%2520n%253Dsc.nextInt%28%29%253B%250A%2520%2520%2520%2520%2520%2520%2520%2520int%2520m%253Dsc.nextInt%28%29%253B%250A%2520%2520%2520%2520%2520%2520%2520%2520sc.nextLine%28%29%253B%250A%2520%2520%2520%2520%2520%2520%2520%2520String%2520str1%2520%253D%2520sc.nextLine%28%29%253B%250A%2520%2520%2520%2520%2520%2520%2520%2520String%2520str2%2520%253D%2520sc.nextLine%28%29%253B%250A%2520%2520%2520%2520%2520%2520%2520%2520if%28isRotation%28str1%252C%2520str2%29%29%257B%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520System.out.println%28%2522YES%2522%29%253B%250A%2520%2520%2520%2520%2520%2520%2520%2520%257Delse%257B%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520System.out.println%28%2522NO%2522%29%253B%250A%2520%2520%2520%2520%2520%2520%2520%2520%257D%250A%2509%257D%250A%257D%2520"   style="width: 681px; height: 1472px; border:0; transform: scale(1); overflow:hidden;"   sandbox="allow-scripts allow-same-origin"> </iframe>
+```java
+import java.util.Scanner;
+
+public class Main {
+
+	public static boolean isRotation(String a, String b) {
+		if (a == null || b == null || a.length() != b.length()) {
+			return false;
+		}
+		String b2 = b + b;
+		return getIndexOf(b2, a) != -1;
+	}
+
+	// KMP Algorithm
+	public static int getIndexOf(String s, String m) {
+		if (s.length() < m.length()) {
+			return -1;
+		}
+		char[] ss = s.toCharArray();
+		char[] ms = m.toCharArray();
+		int si = 0;
+		int mi = 0;
+		int[] next = getNextArray(ms);
+		while (si < ss.length && mi < ms.length) {
+			if (ss[si] == ms[mi]) {
+				si++;
+				mi++;
+			} else if (next[mi] == -1) {
+				si++;
+			} else {
+				mi = next[mi];
+			}
+		}
+		return mi == ms.length ? si - mi : -1;
+	}
+
+	public static int[] getNextArray(char[] ms) {
+		if (ms.length == 1) {
+			return new int[] { -1 };
+		}
+		int[] next = new int[ms.length];
+		next[0] = -1;
+		next[1] = 0;
+		int pos = 2;
+		int cn = 0;
+		while (pos < next.length) {
+			if (ms[pos - 1] == ms[cn]) {
+				next[pos++] = ++cn;
+			} else if (cn > 0) {
+				cn = next[cn];
+			} else {
+				next[pos++] = 0;
+			}
+		}
+		return next;
+	}
+
+	public static void main(String[] args) {
+        Scanner sc = new Scanner(System.in);
+        int n=sc.nextInt();
+        int m=sc.nextInt();
+        sc.nextLine();
+        String str1 = sc.nextLine();
+        String str2 = sc.nextLine();
+        if(isRotation(str1, str2)){
+            System.out.println("YES");
+        }else{
+            System.out.println("NO");
+        }
+	}
+} 
+```
+
+
 
 字符串匹配
 ----------
