--- a/markdown/12.md
+++ b/markdown/12.md
@@ -1,5 +1,7 @@
-## title:链表 author:xiongxinwei
-
+---
+title:链表 
+author:xiongxinwei
+---
 - [author](https://github.com/3293172751) [![img](https://sm.nsddd.top/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f4769746875622d78696f6e6778696e7765692d696e6163746976653f7374796c653d736f6369616c266c6f676f3d676974687562?mail:3293172751@qq.com)](https://github.com/3293172751)
 
 # 第12节 链表
