addly file is graph

--- a/markdown/11.md
+++ b/markdown/11.md
@@ -1,5 +1,5 @@
 + [author](https://github.com/3293172751)
-<a href="https://github.com/3293172751" target="_blank"><img src="https://img.shields.io/badge/Github-xiongxinwei-inactive?style=social&logo=github"></a></p>
+<a href="https://github.com/3293172751" target="_blank"><img src="https://img.shields.io/badge/Github-xiongxinwei-inactive?style=social&logo=github"></a>
 
 # 第11节 位操作和随机函数
 
@@ -17,7 +17,7 @@ Go语言位运算符总结. **在 Golang 中，位运算符主要是用于数值
 位运算符,对整数在内存中的二进制位进行操作
 	
 
-```
+```go
 aa := 1              //二进制001
 	bb := 5              //二进制101
 	fmt.Println(aa & bb) //参与运算的两数各对应的二进位相与（两位均为一才为1）
@@ -42,7 +42,6 @@ aa := 1              //二进制001
 > }
 > ```
 >
-> 
 
 **与Golang不一样的是：Java中的位运算：**
 
