--- a/markdown/18.md
+++ b/markdown/18.md
@@ -70,7 +70,7 @@
  * }
  */
 class Solution {
-    long preVaLue = Long.MIN_VALUE;   //开始设置为整数最小值
+    long preVaLue = Long.MIN_VALUE;   //开始设置为整数最小值 int
     public boolean isValidBST(TreeNode root) {
         if(root == null) {
             return true;
@@ -368,6 +368,54 @@ class Solution {
 
 
 
+### 套路解题
+
+**需要满足条件**
+
++ 左边搜索二叉树
++ 右边搜索二叉树
++ 左边`max < x`
++ 右边`min > x`
+
+> 你需要先左边要两个条件，先右边要两个条件，所以我们选择全部都返回三个返回值
+
+```java
+class Solution {
+    public static ReturnDate process(TreeNode x) {
+        if(x == null) {
+            return null;   //对于max和min不好做处理，返回null，后面判断
+        }
+        ReturnDate leftData = process(x.left);
+        ReturnDate rightData = process(x.right);
+
+        //我也需要返回三个信息
+        int min = x.value;
+        int max = x.value;
+        if(leftData != null) {
+            //左树不为空，pk
+            min = Math.min(min,leftData.min);
+            max = Math.max(max,leftData.max);
+        }
+        if(rithtData != null) {
+            //右树不为空，pk
+            min = Math.min(min,rightData.min);
+            max = Math.max(max,rightData.max);
+        }
+        
+        boolean isBST = true;   //设置是否有
+        if(leftData != null && (!leftData.isBST || leftData.max >= x.value)) {
+            isBST = false;
+            //左边不为空且(左边有东西，且左边最大值 > = x.value)
+        }
+        if(rightData != null && (!rightData.isBST || rithtData.min <= x.value)) {
+            isBST = false;
+        }
+
+        return new ReturnDate(isBST,min,max);
+    }
+}
+```
+
 
 
 ## 判断完全二叉树
@@ -428,25 +476,231 @@ public static boolean isCBT(Node head) {
 
 > 所以我们判断满二叉树就需要用这个公式了，但是需要一个套路来解题
 
+### 套路解题
+
+> 学会树型DP后，这种类型就很容易写了
+
+### 代码
+
+```java
+class A{
+ 	public static class ReturnType {
+        //两个返回值
+        public int nodes; 		//个数
+        public int height;		//高度
+        
+        public ReturnType(int nod,int hei) {
+            nodes = nod;
+            height = hei;
+        }
+    }
+    public static boolean isF(Node head) {
+        if(head == null) {
+            return true;
+        }
+        ReturnType data = process(head);   //收取树的信息
+        return data.nodes == (1 << (data.height - 1));
+        //是否等于2 的 l 次方 - 1
+    }
+    public static ReturnType process(Node x) {
+        if(x == null) {
+            return new ReturnType(0, 0);    //高度和结点个数都是0
+        }
+
+        ReturnType leftData = process(x.left);   //左边子树返回的信息
+        ReturnType rightData = process(x.right); //右边子树返回的信息
+
+        //int height;
+        //int nodes;
+        int height = Math.max(leftData.height,rightData.height) + 1;
+        int nodes = leftData.nodes + rightData.nodes + 1;
+        return new process(height,nodes);
+    }
+}
+```
+
+
+
 
 
 ## 判断平衡二叉树
+
++ [x] [leetcode](https://leetcode.cn/problems/balanced-binary-tree/)
++ [x] [leetcode.com](https://leetcode.com/problems/balanced-binary-tree/)
 
 **对于任何一个子树来说，它的左数和右数的高度绝对值差`<=1`**
 
 <img src="assets/1620.png" alt="平衡二叉树" style="zoom:80%;" />
 
+### 代码(套路解题)
 
+**java**
+
+```java
+class A{
+ 	public static class ReturnType {
+        //两个返回值
+        public boolean isBalanced;  //是否平衡
+        public int height;		   //高度
+        
+        public ReturnType(boolean isB,int hei) {
+            isBalanced = isB;
+            height = hei;
+        }
+    }
+    public static ReturnType process(Node x) {
+        if(x == null) {   //1
+            return new ReturnType(true, 0);
+        }
+        
+        //2  左右子树的递归信息
+        ReturnType leftData = process(x.left);     //左树可以返回对应两个信息
+        ReturnType rightData = process(x.right);   //右树可以返回对应两个信息
+    
+    	//3. 我也返回两个信息   
+        int height = Math.max(leftData.height,rightData.height) + 1;  //返回大的那个高度+1 = 我的高度
+        boolean isBalanced = leftData.isBalanced && rightData.isBalanced && Math.abs(leftData.height - rightData.height) < 2;
+        //左平衡树 + 右平衡树 + 左右绝对值<1
+    return  new ReturnType(isBalanced, height);
+    }
+}
+```
+
+
+
+**Go语言**
+
+```go
+/**
+ * Definition for a binary tree node.
+ * type TreeNode struct {
+ *     Val int
+ *     Left *TreeNode
+ *     Right *TreeNode
+ * }
+ */
+func isBalanced(root *TreeNode) bool {
+    if root == nil {
+        return true
+    }
+    return abs(height(root.Left) - height(root.Right)) <= 1 && isBalanced(root.Left) && isBalanced(root.Right)
+    //对应的是左孩子减去右孩子，而且左孩子存在，右孩子也存在
+}
+
+func height(root *TreeNode) int {
+    if root == nil {
+        return 0
+    }
+
+    return max(height(root.Left), height(root.Right)) + 1
+}
+
+func max(x, y int) int {
+    if x > y {
+        return x
+    }
+    return y
+}
+
+func abs(x int) int {
+    if x < 0 {
+        return -1 * x
+    }
+    return x
+}
+
+```
 
 
 
 ## 二叉树递归套路
 
++ [x] [很好的一个网站可以学习](https://oi-wiki.org/dp/)
 
+**二叉树中最难的是`树型DP`**
+
+[^树型DP]: 树型动态规划题目
+
+**类型题目，可以很多的通解，一般都是向左树要信息，右树要信息。**
+
+[toc]
+
+
+
+## 二叉树的最近公共祖先
+
++ [x] [leetcode236](https://leetcode.cn/problems/lowest-common-ancestor-of-a-binary-tree/)
++ [x] [leetcode.com](https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-tree/)
+
+### 题目描述
+
+给定一个二叉树, 找到该树中两个指定节点的最近公共祖先。
+
+百度百科中最近公共祖先的定义为：“对于有根树 T 的两个节点 p、q，最近公共祖先表示为一个节点 x，满足 x 是 p、q 的祖先且 x 的深度尽可能大（一个节点也可以是它自己的祖先）。”
+
+**Example 1:**
+
+![img](assets/binarytree.png)
+
+```
+Input: root = [3,5,1,6,2,0,8,null,null,7,4], p = 5, q = 1
+Output: 3
+Explanation: The LCA of nodes 5 and 1 is 3.
+```
+
+**Example 2:**
+
+![img](assets/binarytree.png)
+
+```
+Input: root = [3,5,1,6,2,0,8,null,null,7,4], p = 5, q = 4
+Output: 5
+Explanation: The LCA of nodes 5 and 4 is 5, since a node can be a descendant of itself according to the LCA definition.
+```
+
+**Example 3:**
+
+```
+Input: root = [1,2], p = 1, q = 2
+Output: 1
+```
+
+### 代码
+
+```python
+class Solution:
+    def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':
+        def func(root,p,l):
+            if not root: return False
+            if root==p: 
+                l.append(p)
+                return True
+            l.append(root)
+            lFlag = func(root.left,p,l)
+            if lFlag: return True
+            rFlag = func(root.right,p,l)
+            if rFlag: return True
+            l.pop()
+            return False
+        
+        path_p, path_q = [], []
+        func(root, p, path_p) # 查找p的路径
+        func(root, q, path_q) # 查找q的路径
+
+        if not path_p: return p # 如果p路径为空，说明p是起点，直接返回p
+        if not path_q: return q # 如果q路径为空，说明q是起点，直接返回q
+        for item in path_p[::-1]: # 找到p和q的公共节点
+            if item in path_q:
+                return item
+
+        return -1
+
+```
 
 
 
 ## END 链接
+
 + [回到目录](../README.md)
 + [上一节](17.md)
 + [下一节](19.md)
